myCSS/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --primary-color: #4891ff;
    --light-color: #f4f4f6;
    --dark-color: #111;

}


body {
    font-family: 'Poppins', sans-serif;
    font-size: 18px;
    line-height: 1.5;
    background: #fff;
    overflow-x: hidden;
}

a {
    text-decoration: none;
    color: var(--dark-color);

}

ul {
    list-style: none;
}

img {
    max-width: 100%;
}


/* Navbar */

.navbar {
    background: #fff;
    padding: 20px;
}

.navbar .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar .main-menu ul {
    display: flex;
}

.navbar ul li a {
    padding: 10px 20px;
    display: block;
    font-weight: 600;
    transition: 0.5s;
}

.navbar ul li a:hover {
    color: var(--primary-color);
}

.navbar ul li a i {
    margin-right: 10px;
}

.navbar ul li:last-child a {
    margin-left: 10px;
}



/* Hero */
.hero {
    margin-bottom: 50px;
}

.hero#aboutme .container {
    background: url('../images/Kandinsky_two_in_one.jpg') no-repeat;
    background-size: contain;
    background-position: center bottom;
    height: 550px;
}

/* This is the only caption working at the moment... commenting out for now.
.hero#aboutme .hero-text#caption-home {
    vertical-align: bottom;
    text-align: right;
    position: absolute;
    top: 86%;
    left: 50%;
    transform: translate(-61%, -40%);
    color: white;
    font-size: 7px;
    padding: 0%;
  }
*/

.hero#cvpage .container {
    background: url('../images/Kandinsky_diagonal.jpg') no-repeat;
    background-size: contain;
    background-position: center bottom;
    height: 550px;
}

/* Thse doesn't work right now - not sure why...
.hero#cvpage .hero-text#caption-cv {
    display: block;
    vertical-align: bottom;
    text-align: right;
    position: absolute;
    top: 20%;
    left: 50%;
    transform: translate(-60%, -30%);
    color: white;
    font-size: 7px;
  }
*/

.hero#contactpage .container {
    background: url('../images/Kandinsky_untitiled.jpg') no-repeat;
    background-size: contain;
    background-position: center top;
    height: 550px;
}

.hero .hero-content {
    width: 70%;
}

.hero .hero-content a:hover {
    color: var(--light-color);
}

.hero#contactpage .hero-content a:hover {
    color: #727272;
}

.hero .hero-text {
    width: 70%;
    margin-bottom: 20px;
}


/* Video Section goes here (not applicaple) */

/* Pricing goes here (not applicable) */

/* FAQ */
.faq {
    padding: 40px 0;
}


.faq-group {
    border-bottom: 1px solid #ccc;
    padding-bottom: 20px;
}

.faq .faq-group .faq-group-header {
    padding: 20px 0;
    margin-bottom: 15px;
    position: relative;
}

.faq .faq-group .faq-group-header h4 {
    font-weight: 600;
    width: 95%;
}

.faq .faq-group .faq-group-header i {
    position: absolute;
    right: 0;
    top: 35px;
    font-size: 1.3rem;
    cursor: pointer;
} 
    
.faq .faq-group .faq-group-body {
    display: none;
} 

.faq .faq-group .faq-group-body a:hover {
    color: var(--primary-color);
}
    
.faq .faq-group .faq-group-body.open {
    display: block;
} 
    
.faq ul.faq-menu {
    max-width: 400px;
    margin: auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #ddd;
    padding: 10px 20px;
    border-radius: 10px;
    font-weight: 600;
    cursor: pointer;
}
    
.faq ul.faq-menu li {
    padding: 10px 20px;
    border-radius: 5px;
    text-align: center;
}
    
.faq ul.faq-menu li.active {
    background: var(--primary-color);
    color: #fff;
}



/* Footer */
.footer {
    padding: 40px 0;
}

.footer h4 {
    margin-bottom: 10px;
}

.footer ul li {
    line-height: 2.5;
}

.footer a {
    color: #ccc;
}

.footer i {
    font-size: 1.5rem;
    margin-right: 10px;
}

.footer-grid {
    display: grid;
    grid-template-columns: 2fr 1fr 1fr;
    gap: 20px;
    justify-content: center;
    align-items: center;
}

.footer .card {
    margin: 20px 30px 30px 0;
}

.footer a:hover {
    color: var(--primary-color);
}

/* .footer input[type='email'] {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    margin: 20px 0;
}
*/



/* Utility Classes */
.container {
    max-width: 1100px;
    margin: 0 auto;
    padding: 0 15px;

}

.container-sm {
    max-width: 800px;
    margin: 0 auto;
    padding: 0 15px;
    
}

/* Card (underneath video section) (not applicable) */

/* Buttons */

.btn {
    display: inline-block;
    padding: 13px 20px;
    background: var(--light-color);
    color: #333;
    font-weight: 600;
    text-decoration: none;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    text-align: center;
    transition: 0.5s;
}

.btn:hover {
    opacity: 0.8;
}

.btn-primary {
    background: var(--primary-color);
    color: #fff;
}

.btn-dark {
    background: var(--dark-color);
    color: #fff;
}

.btn-block {
    display: block;
    width: 100%;
}

/* Text Classes */
.text-xxl {
    font-size: 3rem;
    line-height: 1.2;
    font-weight: 600;
    margin: 40px 0 20px;
}

.text-xl {
    font-size: 2.2rem;
    line-height: 1.4;
    font-weight: normal;
    margin: 40px 0 20px;
}

.text-lg {
    font-size: 1.8rem;
    line-height: 1.4;
    font-weight: normal;
    margin: 30px 0 20px;
}

.text-med {
    font-size: 1.2rem;
    line-height: 1.4;
    font-weight: normal;
    margin: 20px 0 10px;
}

.text-sm {
    font-size: 0.9rem;
    line-height: 1.4;
    font-weight: normal;
    margin: 10px 0 5px;
}

.text-center {
    text-align: center;
}

/* Background */
.bg-primary {
    background: var(--primary-color);
    color: #fff;
}

.bg-light {
    background: var(--light-color);
    color: #333;
}

.bg-dark {
    background: var(--dark-color);
    color: #fff;
}

.bg-black {
    background: #000;
    color: #fff;
}


/* Hamburger Button */
.hamburger-button {
    display: none;
    background: none;
    border: none;
    cursor: pointer;
    padding: 10px;
    z-index: 1000;
}

.hamburger-button .hamburger-line {
    width: 30px;
    height: 3px;
    background: #333;
    margin: 6px 0;
}


/* Mobile Menu */
.mobile-menu {
    position: fixed;
    top: 0;
    right: -300px; 
    width: 250px;
    height: 100%;
    z-index: 100;
    background: #fff;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
    transition: right 0.3s ease-in-out;
}

.mobile-menu.active {
    right: 0;
}

.mobile-menu ul {
    margin-top: 100px;
    padding-right: 10px;
}

.mobile-menu ul li {
    margin: 10px 0;
}

.mobile-menu ul li a {
    font-size: 20px;
    transform: 0.3s;
}


/* Media Queries */
@media (max-width: 960px) {
    .text-xxl {
        font-size: 2.5rem;
    }
}

@media (max-width: 670px) {
    .navbar .main-menu {
        display: none;
    }

    .navbar .hamburger-button {
        display: block;
    }

    .hero .container {
        background: url('../images/Kandinsky_two_in_one\ copy.png') no-repeat;
        background-size: 350px 400 px;
        background-position: bottom;
        height: 770px;
    }

    .hero .hero-content, .hero .hero-text {
        width: 100%;
        text-align: center;
    }

    .hero .hero-buttons .brn {
        margin-bottom: 10px;
        display: block;
        width 100%
    }
    

    /* testimonial behaving w/ mobile (not applicable) */
    /*.testimonials .testimonials-heading {
        max-width: 100%;
        text-align: center;
    }

    .testimonials .testimonials-grid 
    .pricing .pricing-grid {
        grid-template-columns: 1fr;
    }

    .footer .footer-grid {
        grid-template-columns: 1fr;
    }

    .footer .card {
        margin-right: 0;
    }

    .footer .rooter-grid > div {
        text-align: center;
    }
    */


    /* Text */
    .text-xt {
        font-size: 1.9rem;
    }

    .text-lg {
        font-size: 1.5rem;
    }

    .text-md {
        font-size: 1.1rem;
    }
}

@media (max-width: 500px) {
    .text-xxl {
        font-size: 2rem;
    }
}

